drinks section complete

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   </head>
   <body>
-    <div class="headerbg">
+
+      <div class="headerbg">
+
       <div class="drop">
             <button type="button" data-toggle="collapse" data-target="#menu" class="btn">
                 <span class="icon-bar"></span>
@@ -23,20 +25,69 @@
           </div>
       </div>
 
-      <div class="logo">
-          <img class="logopic img" src="assets/logoBig.png" alt="the logo" /><br><br>
-          <p id="logotext">We Provide The Best Food<br>At the <strong>Right Price</strong></p>
+          <div class="logo">
+              <img class="logopic img" src="assets/logoBig.png" alt="the logo" /><br><br>
+              <p id="logotext">We Provide The Best Food<br>At the <strong>Right Price</strong></p>
+          </div>
       </div>
-      <div class="container1">
-          <div class="happy-hour">
-
+      <div class="container-fluid">
+        <div class="row">
+          <div class="happy col-md-3">
+            <div class="row">
+                <div class="happy-hour">
+                    <p class="cols12text">Happy Hour</p>
+                </div>
+                <div class="party-time">
+                  <p class="cols11text">Party Time</p>
+                </div>
+            </div>
           </div>
-          <div class="party-time">
-
+          <div class="breakfast col-md-3">
+            <p class="cols1text">Breakfast</p>
           </div>
-
+          <div class="lunch col-md-3">
+            <p class="cols1text">Lunch</p>
+          </div>
+          <div class="dinner col-md-3">
+            <p class="cols1text">Dinner</p>
+          </div>
         </div>
-    </div>
+      </div>
+      <div class="container-fluid">
+        <div class="fastfoodcontainer row">
+          <div class="fastfoodpic col-md-6">
+                  <div class="fastpic row-fluid">
+                    <div class="fastfoodpic1">
+                      <img src="assets/fastFood1.jpg" alt="ff1" />
+                    </div>
+                    <div class="fastfoodpic2">
+                      <img src="assets/fastFood2.jpg" alt="ff2" />
+                    </div>
+                  </div>
+          </div>
+          <div class="fastfoodtext col-md-6">
+            <div class="fastfoodtextcontainer">
+              <h2 id="h2ff">Fast Food</h2>
+              <h3 id="h3ff">you'll love our delicious fast food</h3>
+              <p class="fdtxt">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <button type="button" name="button" class="btn fdbtn btn-default">VIEW GALLERY</button>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="drinkscontainer">
+          <div class="drinkstext col-md-6">
+            <h2 id="h2drinks">Drinks</h2>
+            <h3 id="h3drinks">We also produce delicious drinks</h3>
+            <p id="pdrinks">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+          </div>
+          <div class="drinkspics col-md-6">
+            <div class="drinkspicsholder">
+              <img class="drink" src="assets/drink1.jpg" alt="drink1"/><img class="drink" src="assets/drink2.jpg" alt="drink2"/>
+            </div>
+          </div>
+
+      </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
