tabs added without functionality

--- a/index.html
+++ b/index.html
@@ -75,19 +75,51 @@
         </div>
         </div>
       </div>
-      <div class="drinkscontainer">
-          <div class="drinkstext col-md-6">
-            <h2 id="h2drinks">Drinks</h2>
-            <h3 id="h3drinks">We also produce delicious drinks</h3>
-            <p id="pdrinks">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-          </div>
-          <div class="drinkspics col-md-6">
-            <div class="drinkspicsholder">
-              <img class="drink" src="assets/drink1.jpg" alt="drink1"/><img class="drink" src="assets/drink2.jpg" alt="drink2"/>
+      <div class="container-fluid">
+        <div class="drinkscontainer">
+            <div class="drinkstext col-md-6">
+              <h2 id="h2drinks">Drinks</h2>
+              <h3 id="h3drinks">We also produce delicious drinks</h3>
+              <p id="pdrinks">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <button type="button" name="button" class="btn dbtn btn-default">VIEW GALLERY</button>
             </div>
-          </div>
+            <div class="drinkspics col-md-6">
+              <div class="drinkspicsholder row">
+                <img class="drink" src="assets/drink1.jpg" alt="drink1"/><img class="drink" src="assets/drink2.jpg" alt="drink2"/>
+              </div>
+            </div>
+        </div>
 
-      </div>
+          </div>
+            <div class="mainfoodcontainer">
+              <div class="foodtabs">
+                <ul class="nav nav-tabs">
+                  <li class="active"><a href="#"><span class="fnameactive">Fast Food</span></a></li>
+                  <li><a href="#"><span class="tabsname">Drinks</span></a></li>
+                  <li><a href="#"><span class="tabsname">Chicken</span></a></li>
+                  <li><a href="#"><span class="tabsname">Rice</span></a></li>
+                </ul>
+                <div class="tabsdetails">
+                  <div class="tab1pic col-md-3 ">
+                    <img id="chickenburger" src="assets/fastfood/chickenBurger.jpg" alt="chicken burger"/>
+                    <p class="tabpicdef">Chicken Burger</p>
+                  </div>
+                  <div class="tab2pic col-md-3">
+                    <img id="beefburger" src="assets/fastfood/beefBurger.jpg" alt="chicken burger"/>
+                    <p class="tabpicdef">Beef Burger</p>
+                  </div>
+                  <div class="tab3pic col-md-3">
+                    <img id="chickenpizza" src="assets/fastfood/chickenPizza.jpg" alt="chicken burger"/>
+                    <p class="tabpicdef">Chicken Pizza</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="customerscontainer">
+              
+            </div>
+
+
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
