footer section added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-          <div id="menu" class="collapse">
+          <div id="menu" class="collapse list-group">
             <ul>
-              <li><a href="#">Breakfast</a></li>
-              <li><a href="#">Lunch</a></li>
-              <li><a href="#">Dinner</a></li>
+              <li class="list-group-item"><a href="#">Breakfast</a></li>
+              <li class="list-group-item"><a href="#">Lunch</a></li>
+              <li class="list-group-item"><a href="#">Dinner</a></li>
             </ul>
           </div>
       </div>
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="breakfast col-md-3">
-            <p class="cols1text">Breakfast</p>
+            <p class="cols1text"><span>Breakfast</span></p>
           </div>
           <div class="lunch col-md-3">
             <p class="cols1text">Lunch</p>
@@ -116,7 +116,55 @@
               </div>
             </div>
             <div class="customerscontainer">
-              
+              <div class="customers">
+                <div class="customerscol1 col-md-7">
+                  <h2 class="customersh2">Our Happy Customers</h3>
+                  <h3 class="customersh3"><strong>George Richard</strong></h2>
+                  <p class="customersp">Great food! Menu is awesome, there foods are not only great but <br>also in the right price. I'll highly recommend them :)</p>
+                  <div class="customerpics">
+                      <div class="cpic1 col-md-4">
+                        sdfsdfs
+                      </div>
+                      <div class="cpic2 col-md-4">
+                        sdfsdf
+                      </div>
+                      <div class="cpic3 col-md-4">
+                        sdfsdfs
+                      </div>
+                  </div>
+                </div>
+                <div class="customerscol2 col-md-5">
+                  <h2 class="customersh2">About Menu</h2>
+                  <p class="customersp">We are menu a little team of 7 members. Ut wisi enim minim veniam, quis nos trudexer ci tation ullamcorper sucipit lob ortis nisl ut aliquip ex ea commodo conse quat. Dusau tem vel eum iriure dolor in.</p>
+                </div>
+              </div>
+            </div>
+            <div class="footer1">
+              <div class="footerdetails">
+                <h2 class="footerheader"><span id="footertext1">Get our daily food items delivered to your email</span></h2>
+                </div>
+                <form class="form-horizontal">
+                  <div class="col-md-4 formcenter">
+                    <input type="email" class="form-control" placeholder="Your email">
+                  </div>
+                  <div class="col-md-3">
+                    <input type="button" class="btn buttonfootform"value="Subscribe">
+                  </div>
+
+                </form>
+            </div>
+            <div class="mainfooter">
+              <div class="footercontainer">
+                <img src="assets/footerlogos/logo_white.png" alt="footerlogo"/> <p id="menufooter">MENU</p><br><br>
+                <p id="textfooter">Thats What We Are</p>
+                <img class="footerlogos" src="assets/footerlogos/facebook.png" alt="facebook"/>
+                <img src="assets/footerlogos/twitter.png" alt="twitter"/>
+                <img src="assets/footerlogos/pinterest.png" alt="pinterest"/><br><br><br>
+                <p id="signfooter">2016 Menu Restaurant</p>
+
+
+
+              </div>
             </div>
 
 
