--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Self Assesment 2</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link  href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Proza+Libre|Roboto+Slab" rel="stylesheet">
   </head>
   <body>
 
@@ -15,12 +17,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                &#9776;
             </button>
           <div id="menu" class="collapse list-group">
             <ul>
-              <li class="list-group-item"><a href="#">Breakfast</a></li>
-              <li class="list-group-item"><a href="#">Lunch</a></li>
-              <li class="list-group-item"><a href="#">Dinner</a></li>
+              <li class="list-group-item"><a href="#">Contacts</a></li>
+              <li class="list-group-item"><a href="#">Event</a></li>
+              <li class="list-group-item"><a href="#">Menu</a></li>
             </ul>
           </div>
       </div>
@@ -42,8 +45,8 @@
                 </div>
             </div>
           </div>
-          <div class="breakfast col-md-3">
-            <p class="cols1text"><span>Breakfast</span></p>
+          <div class="breakfast col-md-3" id="bfast1">
+            <p class="cols1text"><span id="bfast">Breakfast</span></p>
           </div>
           <div class="lunch col-md-3">
             <p class="cols1text">Lunch</p>
@@ -70,7 +73,7 @@
               <h2 id="h2ff">Fast Food</h2>
               <h3 id="h3ff">you'll love our delicious fast food</h3>
               <p class="fdtxt">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-              <button type="button" name="button" class="btn fdbtn btn-default">VIEW GALLERY</button>
+              <button type="button" name="button" class="btn fdbtn btn-default">VIEW GALLERY<span class="glyphicon glyphicon-arrow-right"></span></button>
           </div>
         </div>
         </div>
@@ -81,7 +84,7 @@
               <h2 id="h2drinks">Drinks</h2>
               <h3 id="h3drinks">We also produce delicious drinks</h3>
               <p id="pdrinks">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-              <button type="button" name="button" class="btn dbtn btn-default">VIEW GALLERY</button>
+              <button type="button" name="button" class="btn dbtn btn-default">VIEW GALLERY &rarr;</button>
             </div>
             <div class="drinkspics col-md-6">
               <div class="drinkspicsholder row">
